# srinivas.gs

./: .gitignore  404.html  CNAME  Makefile  README.md  footer.html  header.html  index.html  install.sh  keybase.txt  pyproject.toml  sgs.asc
assets/: goudybookletter1911-webfont.eot  xolotl.webm
books/: README.md  header.html  index.html  test.html
css/: children.css  css.css  css404.css  meta.css  narrow.css  portfolio-preview.css  star-base.css  star-books.css  star-bs.css  star-phone.css  star-photo.css  star-quotes.css  star-talk.css  star.css
datasheet/: README.md  footer.html  header.html  index.html
essays/: index.html
home/: index.html
js/: sortTable.js
lists/: python.json  python.md  youtube.md
meta/: index.html
old-bolsheviks/: app.js  events.json  index.html  people.json  social-series.json  styles.css
papers/: README.md  footer.html  header.html  index.html
phd-or-phdont/: README.md  body.html  components.js  index.html  journal-citation-stats.json  script.js  style.css
photography/: index.html
portfolio/: index.html  index.json
publications/: index.html
src/: __init__.py  make_lists_from_json.py  make_python_lists.py  portfolio.py  reload.py  render_portfolio.py  render_readmes.py  utils.py  watch.py
talks/: README-uc.md  body.html
templates/: card-image.html  card-img-home.html  card-img-left-badges.html  card-img.html  card-no-img.html  essay_page.html.j2  masonry.html  portfolio.html  youtube-card.html
uc/: README.md  header.html  index.html
uflix/: index.html
why/: README.md  footer.html  header.html  index.html
(+59 files in other folders)
